--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -3,7 +3,7 @@
 $image-height: 60px;
 
 #left {
-    margin-top: 120px;
+    margin-top: 120px !important;
     padding-right: 15px;
     padding-left: 15px;
 
@@ -37,6 +37,7 @@ $image-height: 60px;
 
     .message {
       margin-left: 20px;
+      margin-right: 20px;
       margin-top: 40px;
       height: auto;
       padding-bottom: 30px;
